--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="sub-header">
+    <section class="contact-header">
         <nav>
             <a href="index.html"><img src="./images/logo.png" alt=""/></a>
             <div class="nav-links" id="navLinks">
@@ -28,21 +28,49 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1 class="courseHeader">~About Us~</h1>
+        <h1 class="courseHeader">~Contact Us~</h1>
     </section>
 
-    <!-- About Us Content -->
+    <!-- Contact Us -->
 
-    <section class="about-us">
+    <section class="location">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104995.0067433747!2d135.4158257643835!3d34.67757797153485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6553406e2e1%3A0xc55bc16ee46a2fe7!2sOsaka%2C%20Japan!5e0!3m2!1sen!2sus!4v1620329664200!5m2!1sen!2sus"
+         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </section>
+
+    <section class="contact-us">
         <div class="row">
-            <div class="about-col">
-                <h1 class="courseParagraph">We Are Asia's Largest Magic University!</h1>
-                <p>Established around the 10th century, Kotodama was considered to be one of the finest magical institutions in the Wizarding World particularly in Asia, though other notable schools included Hogwarts School of Witchcraft and Wizardry in London, Beauxbatons Academy of Magic in France, the Durmstrang Institute implied to be in northern Europe, and Ilvermorny School of Witchcraft and Wizardry in the United States.
-                    <br><br>Children with magical abilities were enrolled at birth, and acceptance was confirmed by owl post at age eleven. However, if the child in question was a Muggle-born, a staff member from the school visited the child and his or her family in order to inform them of their magical heritage and the existence of the Wizarding world.</p>
-                <a href="" class="title-btn about-btn">EXPLORE NOW</a>
+            <div class="contact-col">
+                <div>
+                    <i class="fa fa-home"></i>
+                    <span>
+                        <h5>XYZ Road, ABC Building</h5>
+                        <p>Osaka, Honshu, Japan</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <span>
+                        <h5>+1 0123456789</h5>
+                        <p>Monday-Saturday, 8 A.M. to 6 P.M.</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa fa-envelope-o"></i>
+                    <span>
+                        <h5>kotodama@gakuen.edu</h5>
+                        <p>Email Us Your Query!</p>
+                    </span>
+                </div>
             </div>
-            <div class="about-col">
-                <img src="images/tokyo.jpg" alt="">
+            <div class="contact-col">
+                <form action="">
+                    <input type="text" placeholder="Enter Your Name" required>
+                    <input type="email" placeholder="Enter Email Address" required>
+                    <input type="text" placeholder="Enter Your Subject" required>
+                    <textarea rows="8" placeholder="Message" required></textarea>
+                    <button type="submit" class="title-btn about-btn">Send Message</button>
+                </form>
             </div>
         </div>
     </section>
